Hover help for limits.

--- a/templates/index.html
+++ b/templates/index.html
@@ -178,11 +178,11 @@ ul.justify { margin-left:-2.75em; }
 							<option value="FT_WM">FT WM</option>
 							<option value="Cerebellum">CRBL</option>
                         </select></span>
-                        <span title="Limit of the query.">Limit:
+                        <span title="Only include the X closest patients above and below the 'AGE'.">Limit:
                         <input type="text" size="2" name="limit"></span>
-                        <span title="Limit of the query.">Lower X Limit:
+                        <span title="Lower limit of the X-axis range.">Lower X Limit:
                         <input type="text" size="2" name="lxlimit"></span>
-                        <span title="Limit of the query.">Upper X Limit:
+                        <span title="Upper limit of the X-axis range.">Upper X Limit:
                         <input type="text" size="2" name="uxlimit"></span>
                         <span title="More options.">More options <img id='allOpt' src="../img/new_window.png" style="padding-bottom:3px" /></span>
                         <br>
