Allow decimal values during input validation.

--- a/templates/index.html
+++ b/templates/index.html
@@ -329,7 +329,7 @@ Close</div>
         'tCr', 'tNAA', 'tCho', 'Glx']
 
         function inputValid(){
-            var num_list = /^[0-9]+(,[0-9]+)*$/i;
+            var num_list = /^[0-9.]+(,[0-9.]+)*$/i;
             var opt_num_list = /^([0-9]+(,[0-9]+)*)*$/i
 
              
