--- a/templates/index.html
+++ b/templates/index.html
@@ -790,21 +790,7 @@ function downloadCSV (csv_out, name) {
 				drawChart(merged_results)
 			}
 
-			function compare_unique_dict(a,b) {
-				 var a_key = 0
-				 var b_key = 0
-				 for (c in a)
-				 	a_key = a[c]
-				 for (d in b)
-				 	b_key = b[d]
-  				if (a_key < b_key)
-     				return -1;
-  				if (a_key > b_key)
-    				return 1;
-  				return 0;
-}
-
-            function compare_unique_dict2(a,b) {
+            function compare_unique_dict(a,b) {
                  var a_key = 0
                  var b_key = 0
                  for (c in a)
@@ -829,14 +815,14 @@ function downloadCSV (csv_out, name) {
 					var categories = [positive,negative,zero]
 
 					//sort and order
-					var ordered_sd = window.my_config.sd_array[r].sort(compare_unique_dict2)
+					var ordered_sd = window.my_config.sd_array[r].sort(compare_unique_dict)
 
 					for (m in ordered_sd){
-						if (compare_unique_dict2(ordered_sd[m],{'a':0}) == 0){
+						if (compare_unique_dict(ordered_sd[m],{'a':0}) == 0){
 
 							zero.push(ordered_sd[m])
 						}
-						else if (compare_unique_dict2(ordered_sd[m],{'a':0}) == 1){
+						else if (compare_unique_dict(ordered_sd[m],{'a':0}) == 1){
 							positive.unshift(ordered_sd[m])
 						}
 						else {
@@ -848,11 +834,11 @@ function downloadCSV (csv_out, name) {
 
 					//render the list
 					for (c in categories){
-                                                var arrow = ""
+                        var arrow = ""
                         if (c == 0){
-                                arrow += "<img src='/img/up.png' alt='Raised' style='width:15px;height:15px'></img>"
+                                arrow += "<img src='/img/up.png' alt='Raised' style='width:15px;height:15px'>"
                     }       else if (c == 1) {
-                                arrow += "<img src='/img/down.png' alt='Lowered' style='width:15px;height:15px'></img>"
+                                arrow += "<img src='/img/down.png' alt='Lowered' style='width:15px;height:15px'>"
                     }
 
 						if (categories[c].length > 0) {
@@ -961,7 +947,7 @@ function downloadCSV (csv_out, name) {
 				 */
 
                 /*
-				 * for(i=0; i<document.FormName.elements.length; i++) {
+				 * for(i=0; i < document.FormName.elements.length; i++) {
 				 * document.FormName.elements[i].disabled=true; }
 				 */
         </script>
